# pcodec

./: Cargo.toml  README.md  rustfmt.toml  temp.txt
.cargo/: config.toml
.github/workflows/: java.yml  java_publish.yml  python.yml  python_publish.yml  rust.yml
better_io/: Cargo.toml
docs/: CONTRIBUTING.md  benchmark_results.md  ffi_versions.md  format.md
docs/benchmark_results/: columnar_intel_xeon_platinum_8488c_rust1_88.csv  columnar_intel_xeon_platinum_8488c_rust1_88_multi_threaded.csv  columnar_mbp_m3_max_rust1_82.csv  columnar_mbp_m3_max_rust1_89.csv  fcbench_intel_xeon_platinum_8488c_rust1_88.csv
dtype_dispatch/: Cargo.toml  README.md
dtype_dispatch/src/: lib.rs
naegling/: Cargo.toml
naegling/src/: conv.rs  format.fbs  format_generated.rs  header.fbs  header_generated.rs  img.rs  main.rs
pco/: Cargo.toml  README.md  build.rs
pco/assets/: v0_4_5_uniform_type.pco  v0_4_8_minor_version.pco  v1_0_0_conv1.pco  v1_0_0_dict.pco  v1_0_0_i8.pco  v1_0_0_u8.pco
pco/src/: bin_optimization.rs  bit_reader.rs  chunk_config.rs  chunk_latent_compressor.rs  chunk_latent_decompressor.rs  chunk_latent_dissector.rs  compression_intermediates.rs  compression_table.rs  constants.rs  delta.rs  describers.rs  dict_utils.rs  dyn_latent_slice.rs  dyn_slices.rs  float_mult_utils.rs  float_quant_utils.rs  int_mult_utils.rs  latent_batch_dissector.rs  latent_page_decompressor.rs  lib.rs  macros.rs  matrix.rs  page_latent_decompressor.rs  read_write_uint.rs  sampling.rs  scratch_array.rs  writable_dst.rs
pco/src/ans/: decoding.rs  mod.rs
pco/src/data_types/: float.rs  floats.rs  mod.rs  number_priv.rs  signed.rs  signeds.rs  unsigned.rs  unsigneds.rs
pco/src/delta/: consecutive.rs  conv1.rs  conv2.rs  int_conv1.rs  lookback.rs  mod.rs
pco/src/experimental/: mod.rs
pco/src/metadata/: chunk.rs  chunk_latent_var.rs  delta_encoding.rs  dyn_latent.rs  dyn_latents.rs  format_version.rs  mod.rs  mode.rs  page.rs  page_latent_var.rs  per_latent_var.rs
pco/src/mode/: classic.rs  dict.rs  float_mult.rs  float_quant.rs  int_mult.rs  mod.rs
pco/src/standalone/: compressor.rs  decompressor.rs  mod.rs  simple.rs
pco/src/tests/: compatibility.rs  low_level.rs  recovery.rs  stability.rs  stack_sizes.rs
pco/src/wrapped/: chunk_compressor.rs  guarantee.rs  (+5 more)
pco_c/: Cargo.toml
pco_c/include/: cpcodec.h  cpcodec_generated.h
pco_c/src/: lib.rs
pco_c/test/: test_cpcodec.c
pco_cli/: Cargo.toml  generate_randoms.py
pco_cli/src/: arrow_handlers.rs  chunk_config_opt.rs  dtypes.rs  num_vec.rs  parse.rs  utils.rs
pco_cli/src/bench/: handler.rs  mod.rs
pco_cli/src/bench/codecs/: alp.rs  blosc.rs  brotli.rs  mod.rs  openzl.rs  parquet.rs  pco.rs  pcopage.rs  qco.rs  snappy.rs  spdp.rs  sprintz.rs  turbo_pfor.rs  utils.rs  vortex.rs  zstd.rs
pco_cli/src/compress/: handler.rs  mod.rs
pco_cli/src/decompress/: handler.rs
pco_cli/src/input/: audio.rs  mod.rs
pco_cli/src/inspect/: handler.rs  mod.rs
pco_java/: CHECKLIST.txt  Cargo.toml  README.md  build_for_all_targets.sh  pom.xml
pco_media/: Cargo.toml
pco_media/src/: lib.rs
pco_python/: Cargo.toml  README.md
pco_python/src/: config.rs  lib.rs  standalone.rs  utils.rs
pco_python/test/: test_standalone.py  test_wrapped.py
(+27 files in other folders)
