[workspace]
resolver = "2"

members = [
  "better_io",
  "dtype_dispatch",
  "pco",
  "pco_c",
  "pco_cli",
  "pco_java/src/main/rust",
  "pco_python",
  "quantile-compression/ffi",
  "quantile-compression/q_compress",
]

exclude = [
  # conflicting dependencies and not worth upgrading
  "quantile-compression/q_compress_cli"
]

#[profile.release.package.pco_java]
#lto = true
#codegen-units = 1
