[package]
name = "pco_cli"
version = "1.0.0"
edition = "2021"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding", "command-line-utilities"]
description = "compresses, inspects, and decompresses pco data"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["compression", "numerical", "delta"]
license = "Apache-2.0"
repository = "https://github.com/pcodec/pcodec"

[[bin]]
name = "pcodec"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
arrow = { workspace = true, features = ["csv"] }
better_io = { version = "0.2.0", path = "../better_io" }
blosc2-src = { workspace = true, features = ["zstd"], optional = true }
brotli = { workspace = true, optional = true }
bytes = "1.4.0"
clap = { workspace = true, features = ["derive"] }
half = { workspace = true, features = ["std"] }
hound = { workspace = true, optional = true }
indicatif = "0.17.8"
once_cell = { workspace = true, optional = true }
parquet = { workspace = true, features = [
  "arrow",
  "base64",
  "snap",
  "zstd",
] }
pco = { version = "1.0.0", path = "../pco" }
q_compress = { version = "0.11.7", path = "../quantile-compression/q_compress", optional = true }
rayon = { workspace = true, optional = true }
rust-openzl = {workspace = true, optional = true }
snap = "1.1.0"
spdp_sys = { workspace = true, optional = true }
toml = "0.8.12"
tabled = "0.18.0"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
turbo_pfor_sys = { workspace = true, optional = true }
vortex = { workspace = true, features = ["files", "tokio"], optional = true }
zstd = "0.13"

[features]
audio = ["hound"]
full_bench = ["blosc2-src", "brotli", "once_cell", "q_compress", "rayon", "rust-openzl", "spdp_sys", "tokio", "turbo_pfor_sys", "vortex"]
